[gd_scene load_steps=7 format=2]

[ext_resource path="res://Burg/Keller/K07/S11/Szene.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.5551, 71.0934 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 32.4383, 32.96 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 73.444, 61.5582 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 91.4324, 92.4664 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Label2" type="Label" parent="."]
margin_left = 911.716
margin_top = 184.248
margin_right = 1156.72
margin_bottom = 198.248
text = "Mit Areas die Gravitation beeinflussen"

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 414.781, 747.862 )
scale = Vector2( 0.0313415, 0.717681 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 5994.74, 74.4057 )
scale = Vector2( 437.361, 1 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="Area2D"]
margin_left = -16.0
margin_right = 56.0
margin_bottom = 99.0
rect_scale = Vector2( 166.443, 1.52755 )
color = Color( 0.596078, 0.101961, 0.101961, 1 )

[node name="KinematicBody2D" type="KinematicBody2D" parent="."]
position = Vector2( -500, 807.7 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="KinematicBody2D"]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="KinematicBody2D"]
scale = Vector2( 3.09273, 3.18932 )

[node name="Sprite" type="Sprite" parent="KinematicBody2D"]
texture = ExtResource( 2 )

[node name="Label" type="Label" parent="."]
margin_left = 419.661
margin_top = 712.335
margin_right = 459.661
margin_bottom = 726.335

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0
autostart = true

[node name="Area2D1" type="Area2D" parent="."]
position = Vector2( 499.763, 354.644 )
space_override = 3
gravity_vec = Vector2( 0, -5 )
linear_damp = 0.0
priority = 4.0
monitoring = false
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D1"]
shape = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Area2D1"]
margin_left = -71.1878
margin_top = -59.5811
margin_right = -31.1878
margin_bottom = -19.5811
rect_scale = Vector2( 3.58962, 3.00977 )

[node name="Area2D2" type="Area2D" parent="."]
position = Vector2( 1019.1, 352.189 )
space_override = 3
linear_damp = 4.67
priority = 4.0
monitoring = false
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D2"]
shape = SubResource( 3 )

[node name="ColorRect" type="ColorRect" parent="Area2D2"]
margin_left = -71.1878
margin_top = -59.5811
margin_right = -31.1878
margin_bottom = -19.5811
rect_scale = Vector2( 3.58962, 3.00977 )

[node name="Area2D3" type="Area2D" parent="."]
position = Vector2( 1427.86, 320.439 )
space_override = 3
gravity_point = true
gravity_vec = Vector2( 0, 0 )
linear_damp = 0.7
__meta__ = {
"_edit_group_": true
}

[node name="ColorRect" type="ColorRect" parent="Area2D3"]
margin_left = -90.7183
margin_top = -94.1996
margin_right = -50.7183
margin_bottom = -54.1996
rect_scale = Vector2( 4.50827, 4.68856 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D3"]
shape = SubResource( 4 )
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_Area2D_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_Area2D_body_shape_exited"]
[connection signal="viewport_entered" from="KinematicBody2D/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_entered"]
[connection signal="viewport_exited" from="KinematicBody2D/VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_viewport_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
